--- a/SummerNote/demo.html
+++ b/SummerNote/demo.html
@@ -19,7 +19,7 @@
             </script>
 
             <script type="text/x-handlebars" data-template-name="components/rich-input">
-                <div class="richNote"></div>
+                {{textarea class="richNote"}}
             </script>
 
         <script src="libs/js/starter-kit-1.7.0/jquery-1.10.2.js"></script>
