--- a/SummerNote/demo.html
+++ b/SummerNote/demo.html
@@ -11,11 +11,11 @@
         <script type="text/x-handlebars" data-template-name="application">
             <div class="container">
                 <h2>Text Editor 1</h2>
-                {{rich-text height=250 content=postContent}}
+                {{rich-text height=height content=postContent}}
             </div>
             <div class="container">
                 <h2>Text Editor 2</h2>
-                {{rich-text height=250 content=postContent}}
+                {{rich-text height=height content=postContent}}
             </div>
         </script>
 
