--- a/SummerNote/test.html
+++ b/SummerNote/test.html
@@ -2,10 +2,26 @@
 <html>
     <head>
         <link rel="stylesheet" href="libs/css/mocha.css" />
+        <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+        <link href="libs/css/font-awesome.min.css" rel="stylesheet">
+        <link href="libs/css/summernote.css" rel="stylesheet">
     </head>
     <body>
+
         <div id="mocha"></div>
-        <script src="libs/js/jquery.min.js"></script>
+        <div class="ember-app">
+            <script type="text/x-handlebars" data-template-name="application">
+                {{outlet}}
+            </script>
+            <script type="text/x-handlebars" data-template-name="components/rich-text">
+                <div class="container">
+                    {{textarea class="richNote"}}
+                </div>
+            </script>
+        </div>
+        <script src="libs/js/starter-kit-1.7.0/jquery-1.10.2.js"></script>
+        <script src="libs/js/bootstrap.min.js"></script>
+        <script src="libs/js/summernote.js"></script>
         <script src="libs/js/summernote.min.js"></script>
         <script src="libs/js/starter-kit-1.7.0/handlebars-1.1.2.js"></script>
         <script src="libs/js/starter-kit-1.7.0/ember-1.7.0.js"></script>
@@ -13,13 +29,13 @@
         <script src="libs/application/app.js"></script>
         <script src="libs/application/components/RichTextComponent.js"></script>
         <script src="libs/application/controllers/RichTextController.js"></script>
-        <script src="libs/Tests/test-setup.js"></script>
         <script src="libs/Tests/mocha.js"></script>
         <script src="libs/Tests/sinon.js"></script>
         <script src="libs/Tests/chai.js"></script>
         <script src="libs/Tests/expect.js"></script>
         <script>mocha.setup('bdd')</script>
         <script>expect = chai.expect</script>
+        <script src="libs/Tests/test-setup.js"></script>
         <script src="libs/Tests/RichTextComponentTests.js"></script>
         <script>
             mocha.run();
